chore: adding mocks changes

--- a/packages/storybook/src/pages/mocks/space.stories.mdx
+++ b/packages/storybook/src/pages/mocks/space.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
+import { MocksGrid } from "../../components/MocksGrid";
 import { space } from "@micode-ui/mocks";
 
-<Meta title="Tokens/Space" />
+<Meta title="Mocks/Space" />
 
 # Space
 
-<TokensGrid tokens={space} hasRemValue />
+<MocksGrid mocks={space} hasRemValue />
