--- a/packages/storybook/src/pages/mocks/font-families.stories.mdx
+++ b/packages/storybook/src/pages/mocks/font-families.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
+import { MocksGrid } from "../../components/MocksGrid";
 import { fonts } from "@micode-ui/mocks";
 
-<Meta title="Tokens/Font Families" />
+<Meta title="Mocks/Font Families" />
 
 # Font Families
 
-<TokensGrid tokens={fonts} />
+<MocksGrid mocks={fonts} />
