--- a/packages/storybook/src/pages/mocks/font-weights.stories.mdx
+++ b/packages/storybook/src/pages/mocks/font-weights.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
+import { MocksGrid } from "../../components/MocksGrid";
 import { fontWeights } from "@micode-ui/mocks";
 
-<Meta title="Tokens/Font Weights" />
+<Meta title="Mocks/Font Weights" />
 
 # Font Weights
 
-<TokensGrid tokens={fontWeights} />
+<MocksGrid mocks={fontWeights} />
