--- a/packages/storybook/src/pages/mocks/line-heights.stories.mdx
+++ b/packages/storybook/src/pages/mocks/line-heights.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
+import { MocksGrid } from "../../components/MocksGrid";
 import { lineHeights } from "@micode-ui/mocks";
 
-<Meta title="Tokens/Line Heights" />
+<Meta title="Mocks/Line Heights" />
 
 # Line Heights
 
-<TokensGrid tokens={lineHeights} />
+<MocksGrid mocks={lineHeights} />
