--- a/packages/storybook/src/pages/mocks/radii.stories.mdx
+++ b/packages/storybook/src/pages/mocks/radii.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/addon-docs";
-import { TokensGrid } from "../../components/TokensGrid";
+import { MocksGrid } from "../../components/MocksGrid";
 import { radii } from "@micode-ui/mocks";
 
-<Meta title="Tokens/Radii" />
+<Meta title="Mocks/Radii" />
 
 # Radii
 
-<TokensGrid tokens={radii} />
+<MocksGrid mocks={radii} />
