feat: implementing dark theme mode

--- a/packages/storybook/src/pages/mocks/colors.stories.mdx
+++ b/packages/storybook/src/pages/mocks/colors.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
-import { ColorsGrid } from "../../components/ColorsGrid";
+import { ColorsGrid, DarkColorsGrid } from "../../components/ColorsGrid";
 
 <Meta title="Mocks/Colors" />
 
@@ -8,3 +8,9 @@ import { ColorsGrid } from "../../components/ColorsGrid";
 Essas são as cores utilizadas no Micode UI.
 
 <ColorsGrid />
+
+<br />
+# Dark Colors
+
+<DarkColorsGrid />
+
